Updating to Java 11 not complete